categoria-delete implementado

--- a/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
+++ b/src/app/components/views/categoria/categoria-delete/categoria-delete.component.html
@@ -1,25 +1,30 @@
 <form>
-    <h1>CRIANDO UMA NOVA CATEGORIA</h1>
+    <h1>EXCLUINDO UMA CATEGORIA</h1>
 
     <mat-form-field class="form">
         <mat-label >Nome</mat-label>
-        <input matInput [(ngModel)]="categoria.nome" type="text" name="nome" placeholder="Ex. Computação">
+        <input matInput
+            [(ngModel)]="categoria.nome"
+            disabled
+            type="text" 
+            name="nome">
     </mat-form-field>
 
     <mat-form-field class="form">
         <mat-label >Descrição</mat-label>
         <textarea matInput
             [(ngModel)]="categoria.descricao"
+            disabled
             type="text" 
-            name="descricao" 
-            placeholder="Ex. Livros de Computação"></textarea>        
+            name="descricao"></textarea>        
     </mat-form-field>
 
     <div class="buttons">
-        <button (click)="create()" 
+        <button 
+            (click)="delete()"
             class="mat-elevation-z8" 
             mat-stroked-button 
-            color="primary">CRIAR</button>
+            color="primary">EXCLUIR</button>
 
         <button class="mat-elevation-z8" 
             (click)="cancel()"
