--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,37 +1,29 @@
 <div class="content">
 
     <div class="title">
-        <h1>CATEGORIAS</h1>
+        <h1>LIVROS</h1>
     </div>
 
-    <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" 
-      mat-stroked-button color="primary">NOVA CATEGORIA</button>
+    <button class="mat-elevation-z8"
+      mat-stroked-button color="primary">NOVO LIVRO</button>
 
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table [dataSource]="listCategoria">
+        <table class="table" mat-table [dataSource]="listLivro">
       
-            <!-- Position Column -->
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef> ID </th>
               <td mat-cell *matCellDef="let row"> {{ row.id }} </td>
             </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="nome">
-              <th mat-header-cell *matHeaderCellDef> NOME </th>
-              <td mat-cell *matCellDef="let row"> {{ row.nome }} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="descricao">
-              <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
-              <td mat-cell *matCellDef="let row"> {{ row.descricao }} </td>
+
+            <ng-container matColumnDef="titulo">
+              <th mat-header-cell *matHeaderCellDef> TITULO </th>
+              <td mat-cell *matCellDef="let row"> {{ row.titulo }} </td>
             </ng-container>
             
             <ng-container matColumnDef="livros">
-              <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+              <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
               <td mat-cell *matCellDef="let row">
-                <a class="livros" routerLink="{{ row.id }}/livros">
+                <a class="livros" >
                   <i class="material-icons">book</i>
                 </a>
               </td>
@@ -41,10 +33,10 @@
             <ng-container matColumnDef="acoes">
               <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
               <td mat-cell *matCellDef="let row">
-                <a class="edit" routerLink="update/{{ row.id }}">
+                <a class="edit" href="#">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" routerLink="delete/{{ row.id }}">
+                <a class="delete" href="#">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
