--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -4,7 +4,7 @@
         <h1>LIVROS</h1>
     </div>
 
-    <button class="mat-elevation-z8"
+    <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()"
       mat-stroked-button color="primary">NOVO LIVRO</button>
 
     <div class="mat-elevation-z8 content-table">
